--- a/Project/android/gradle.properties
+++ b/Project/android/gradle.properties
@@ -44,4 +44,5 @@ newArchEnabled=false
 hermesEnabled=true
 MYAPP_UPLOAD_STORE_FILE=my-upload-key.keystore
 MYAPP_UPLOAD_KEY_ALIAS=my-key-alias
-# something
+MYAPP_UPLOAD_STORE_PASSWORD=Password
+MYAPP_UPLOAD_KEY_PASSWORD=Password
