--- a/Project/package.json
+++ b/Project/package.json
@@ -10,17 +10,23 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.4",
     "@react-navigation/material-top-tabs": "^6.5.3",
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/stack": "^6.3.12",
-    "react": "18.2.0",
-    "react-native": "0.71.2",
-    "react-native-gesture-handler": "^2.9.0",
-    "react-native-pager-view": "^6.1.2",
-    "react-native-reanimated": "^2.14.4",
-    "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "^3.19.0",
+    "@types/react-native": "~0.70.6",
+    "expo": "^47.0.13",
+    "expo-status-bar": "^1.4.2",
+    "react": "18.1.0",
+    "react-native": "0.70.5",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-pager-view": "6.0.1",
+    "react-native-paper": "^5.2.0",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
     "react-native-tab-view": "^3.3.4",
+    "react-native-vector-icons": "^9.2.0",
     "react-navigation": "^4.4.4"
   },
   "devDependencies": {
@@ -37,7 +43,7 @@
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.73.7",
     "prettier": "^2.4.1",
-    "react-test-renderer": "18.2.0",
+    "react-test-renderer": "18.1.0",
     "typescript": "4.8.4"
   },
   "jest": {
