--- a/Project/package.json
+++ b/Project/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^6.5.4",
     "@react-navigation/material-top-tabs": "^6.5.3",
     "@react-navigation/native": "^6.1.3",
+    "@react-navigation/native-stack": "^6.9.9",
     "@react-navigation/stack": "^6.3.12",
     "@types/react-native": "~0.70.6",
     "expo": "^47.0.13",
