--- a/Prisma_Database/package.json
+++ b/Prisma_Database/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "devBuild:build": "npx prisma migrate dev --create-only --name init",
+    "devBuild:migrate": "npx prisma migrate dev --create-only --name init",
+    "devBuild:push": "npx prisma db push --preview-feature",
     "devBuild:generate": "npx prisma generate",
     "devBuild:studio": "npx prisma studio",
     "devBuild:serve": "npx prisma studio",
@@ -21,12 +22,12 @@
     "@types/express": "^4.17.17",
     "@types/node": "^18.13.0",
     "nodemon": "^2.0.15",
-    "prisma": "^4.10.1",
+    "prisma": "4.10.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "@prisma/client": "^4.10.1",
+    "@prisma/client": "4.10.1",
     "express": "^4.18.2"
   }
 }
